--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,6 +659,97 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Skills
+--------------------------------------------------------------*/
+.skills .nav-tabs {
+  border: 0;
+}
+
+.skills .nav-link {
+  border: 1px solid #d4d6df;
+  padding: 15px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #2a2c39;
+  border-radius: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.skills .nav-link i {
+  padding-right: 15px;
+  font-size: 48px;
+}
+
+.skills .nav-link h4 {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.skills .nav-link:hover {
+  color: #00a2ca;
+}
+
+.skills .nav-link.active {
+  background: #00a2ca;
+  color: #fff;
+  border-color: #00a2ca;
+}
+
+@media (max-width: 768px) {
+  .skills .nav-link i {
+    padding: 0;
+    line-height: 1;
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 575px) {
+  .skills .nav-link {
+    padding: 15px;
+  }
+  .skills .nav-link i {
+    font-size: 24px;
+  }
+}
+
+.skills .tab-content {
+  margin-top: 30px;
+}
+
+.skills .tab-pane h3 {
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.skills .tab-pane ul {
+  list-style: none;
+  padding: 0;
+}
+
+.skills .tab-pane ul li {
+  padding-bottom: 10px;
+}
+
+.skills .tab-pane ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: #00a2ca;
+}
+
+.skills .tab-pane p:last-child {
+  margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
 .features .nav-tabs {
@@ -1272,6 +1363,91 @@ section {
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
+.team {
+  background: #fff;
+  padding: 60px 0;
+}
+
+.team .member {
+  margin-bottom: 20px;
+  overflow: hidden;
+  border-radius: 5px;
+  background: #fff;
+  -webkit-box-shadow: 0px 2px 15px linear-gradient(to right, #3a6073, #16222a);
+          box-shadow: 0px 2px 15px linear-gradient(to right, #3a6073, #16222a);
+}
+
+.team .member .member-img {
+  position: relative;
+  overflow: hidden;
+}
+
+.team .member .social {
+  position: absolute;
+  left: 0;
+  bottom: 30px;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+  text-align: center;
+}
+
+.team .member .social a {
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+  color: #2a2c39;
+  margin: 0 3px;
+  padding-top: 7px;
+  border-radius: 50px;
+  width: 36px;
+  height: 36px;
+  background: -webkit-gradient(linear, left top, right top, from(#3a6073), to(#16222a));
+  background: linear-gradient(to right, #3a6073, #16222a);
+  display: inline-block;
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+  color: #fff;
+}
+
+.team .member .social a:hover {
+  background: #00d9ff;
+}
+
+.team .member .social i {
+  font-size: 18px;
+}
+
+.team .member .member-info {
+  padding: 25px 15px;
+}
+
+.team .member .member-info h4 {
+  font-weight: 700;
+  margin-bottom: 5px;
+  font-size: 18px;
+  color: #2a2c39;
+}
+
+.team .member .member-info span {
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+  color: #aaaaaa;
+}
+
+.team .member .member-info p {
+  font-style: italic;
+  font-size: 14px;
+  line-height: 26px;
+  color: #777777;
+}
+
+.team .member:hover .social {
+  opacity: 1;
+  bottom: 15px;
+}
+
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
