--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -629,6 +629,92 @@ section {
   text-decoration: none;
 }
 
+
+/*--------------------------------------------------------------
+# Skills
+--------------------------------------------------------------*/
+.skills .nav-tabs {
+  border: 0;
+}
+
+.skills .nav-link {
+  border: 1px solid #d4d6df;
+  padding: 15px;
+  transition: 0.3s;
+  color: #2a2c39;
+  border-radius: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.skills .nav-link i {
+  padding-right: 15px;
+  font-size: 48px;
+}
+
+.skills .nav-link h4 {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.skills .nav-link:hover {
+  color: $primaryC;
+}
+
+.skills .nav-link.active {
+  background: $primaryC;
+  color: #fff;
+  border-color: $primaryC;
+}
+
+@media (max-width: 768px) {
+  .skills .nav-link i {
+    padding: 0;
+    line-height: 1;
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 575px) {
+  .skills .nav-link {
+    padding: 15px;
+  }
+
+  .skills .nav-link i {
+    font-size: 24px;
+  }
+}
+
+.skills .tab-content {
+  margin-top: 30px;
+}
+
+.skills .tab-pane h3 {
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.skills .tab-pane ul {
+  list-style: none;
+  padding: 0;
+}
+
+.skills .tab-pane ul li {
+  padding-bottom: 10px;
+}
+
+.skills .tab-pane ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: $primaryC;
+}
+
+.skills .tab-pane p:last-child {
+  margin-bottom: 0;
+}
+
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
@@ -1207,85 +1293,85 @@ section {
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
-// .team {
-//   background: #fff;
-//   padding: 60px 0;
-// }
+.team {
+  background: #fff;
+  padding: 60px 0;
+}
 
-// .team .member {
-//   margin-bottom: 20px;
-//   overflow: hidden;
-//   border-radius: 5px;
-//   background: #fff;
-//   box-shadow: 0px 2px 15px $background;
-// }
+.team .member {
+  margin-bottom: 20px;
+  overflow: hidden;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 2px 15px $background;
+}
 
-// .team .member .member-img {
-//   position: relative;
-//   overflow: hidden;
-// }
+.team .member .member-img {
+  position: relative;
+  overflow: hidden;
+}
 
-// .team .member .social {
-//   position: absolute;
-//   left: 0;
-//   bottom: 30px;
-//   right: 0;
-//   opacity: 0;
-//   transition: ease-in-out 0.3s;
-//   text-align: center;
-// }
+.team .member .social {
+  position: absolute;
+  left: 0;
+  bottom: 30px;
+  right: 0;
+  opacity: 0;
+  transition: ease-in-out 0.3s;
+  text-align: center;
+}
 
-// .team .member .social a {
-//   transition: color 0.3s;
-//   color: #2a2c39;
-//   margin: 0 3px;
-//   padding-top: 7px;
-//   border-radius: 50px;
-//   width: 36px;
-//   height: 36px;
-//   background: $background;
-//   display: inline-block;
-//   transition: ease-in-out 0.3s;
-//   color: #fff;
-// }
+.team .member .social a {
+  transition: color 0.3s;
+  color: #2a2c39;
+  margin: 0 3px;
+  padding-top: 7px;
+  border-radius: 50px;
+  width: 36px;
+  height: 36px;
+  background: $background;
+  display: inline-block;
+  transition: ease-in-out 0.3s;
+  color: #fff;
+}
 
-// .team .member .social a:hover {
-//   background:$primaryCLighter;
-// }
+.team .member .social a:hover {
+  background:$primaryCLighter;
+}
 
-// .team .member .social i {
-//   font-size: 18px;
-// }
+.team .member .social i {
+  font-size: 18px;
+}
 
-// .team .member .member-info {
-//   padding: 25px 15px;
-// }
+.team .member .member-info {
+  padding: 25px 15px;
+}
 
-// .team .member .member-info h4 {
-//   font-weight: 700;
-//   margin-bottom: 5px;
-//   font-size: 18px;
-//   color: #2a2c39;
-// }
+.team .member .member-info h4 {
+  font-weight: 700;
+  margin-bottom: 5px;
+  font-size: 18px;
+  color: #2a2c39;
+}
 
-// .team .member .member-info span {
-//   display: block;
-//   font-size: 13px;
-//   font-weight: 400;
-//   color: #aaaaaa;
-// }
+.team .member .member-info span {
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+  color: #aaaaaa;
+}
 
-// .team .member .member-info p {
-//   font-style: italic;
-//   font-size: 14px;
-//   line-height: 26px;
-//   color: #777777;
-// }
+.team .member .member-info p {
+  font-style: italic;
+  font-size: 14px;
+  line-height: 26px;
+  color: #777777;
+}
 
-// .team .member:hover .social {
-//   opacity: 1;
-//   bottom: 15px;
-// }
+.team .member:hover .social {
+  opacity: 1;
+  bottom: 15px;
+}
 
 /*--------------------------------------------------------------
 # Contact
